Registered new prices and inserted the buttons.

--- a/public/index.html
+++ b/public/index.html
@@ -272,22 +272,20 @@
                     <div class="intro">
                         <h2>CURSO</h2>
                         <h1>Revit Architecture 2017 + Projeto de Prefeitura</h1>
-                        <h2><b>Início:</b> 24/06 <b>Fim:</b> 05/08 <b>Carga horária:</b> 24 horas</h2>
-                        <h2><b>Horário:</b> Sábados das 13h as 16h</h2>
+                        <!-- <h2><b>Início:</b> 24/06 <b>Fim:</b> 05/08 <b>Carga horária:</b> 24 horas</h2>
+                        <h2><b>Horário:</b> Sábados das 13h as 16h</h2> -->
                         <h2><b>Investimento:</b> R$749,90 em até 12x no cartão</h2>
                         </br>
                         <h2><b style="color: white">MATRICULE-SE JÁ!</b></h2>
-                        <br>
-                        <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
-                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post" target="_blank">
+                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
                         <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
-                        <input type="hidden" name="code" value="17F42C65131357FBB44BFFAB68F3C9D4" />
+                        <input type="hidden" name="code" value="AF1EDEAABABAF8EFF48C1FA412937029" />
                         <input type="hidden" name="iot" value="button" />
-                        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-comprar-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+                        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-pagar-laranja-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
                         </form>
                     </div>
                 </div>
-                <div class="slide">
+                <!-- <div class="slide">
                     <div class="intro">
                         <h2>CURSO DE FÉRIAS</h2>
                         <h1>Revit Architecture 2017 + Projeto de Prefeitura</h1>
@@ -296,17 +294,17 @@
                         <h2><b>Investimento:</b> R$749,90 em até 12x no cartão</h2>
                         </br>
                         <h2><b style="color: white">MATRICULE-SE JÁ!</b></h2>
-                        <br>
+                        <br> -->
                         <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
-                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post" target="_blank">
+                        <!-- <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post" target="_blank"> -->
                         <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
-                        <input type="hidden" name="code" value="2719C9CA1616CCEDD49F2FA2C44CF185" />
+                        <!-- <input type="hidden" name="code" value="2719C9CA1616CCEDD49F2FA2C44CF185" />
                         <input type="hidden" name="iot" value="button" />
                         <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-comprar-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
-                        </form>
+                        </form> -->
                         <!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
-                    </div>
-                </div>
+                    <!-- </div> -->
+                <!-- </div> -->
             </div>
 
 
@@ -323,40 +321,18 @@
                     <div class="intro">
                         <h2  style="color: #656565">CURSO</h2>
                         <h1>Sketchup +<br> Vray + Layout</h1>
-                        <h2  style="color: #656565"><b>Início:</b> 24/06 <b>Fim:</b> 05/08 <b>Carga horária:</b> 24 horas</h2>
-                        <h2  style="color: #656565"><b>Horário:</b> Sábados das 9h às 12h</h2>
+                        <!-- <h2  style="color: #656565"><b>Início:</b> 24/06 <b>Fim:</b> 05/08 <b>Carga horária:</b> 24 horas</h2>
+                        <h2  style="color: #656565"><b>Horário:</b> Sábados das 9h às 12h</h2> -->
                         <h2  style="color: #656565"><b>Investimento:</b> R$749,90 em até 12x no cartão</h2>
                         </br>
                         <h2  style="color: #656565"><b>MATRICULE-SE JÁ!</b></h2>
                         <br>
-                        <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
-                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post" target="_blank">
+                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
                         <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
-                        <input type="hidden" name="code" value="5C102BE8616195AEE4896FB5D8EF3651" />
+                        <input type="hidden" name="code" value="3D9EE40F454562CBB42C8F89C284E94D" />
                         <input type="hidden" name="iot" value="button" />
-                        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-comprar-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+                        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-pagar-laranja-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
                         </form>
-                        <!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
-                    </div>
-                </div>
-                <div class="slide">
-                    <div class="intro">
-                        <h2  style="color: #656565">CURSO DE FÉRIAS</h2>
-                        <h1>Sketchup +<br> V-ray + Layout</h1>
-                        <h2  style="color: #656565"><b>Início:</b> 04/07 <b>Fim:</b> 27/07 <b>Carga horária:</b> 24 horas</h2>
-                        <h2  style="color: #656565"><b>Horário:</b> Terças e quintas das 19h às 22h</h2>
-                        <h2  style="color: #656565"><b>Investimento:</b> R$749,90 em até 12x no cartão</h2>
-                        </br>
-                        <h2  style="color: #656565"><b>MATRICULE-SE JÁ!</b></h2>
-                        <br>
-                        <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
-                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post" target="_blank">
-                        <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
-                        <input type="hidden" name="code" value="8E53AAE12121203CC4EE3F8A874E4F68" />
-                        <input type="hidden" name="iot" value="button" />
-                        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-comprar-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
-                        </form>
-                        <!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
                     </div>
                 </div>
             </div>
@@ -374,22 +350,20 @@
                 </div>
                 <div class="slide">
                     <div class="intro">
-                        <h2>CURSO DE FÉRIAS</h2>
+                        <h2>CURSO</h2>
                         <h1>Autocad + Projeto de Prefeitura</h1>
-                        <h2><b>Início:</b> 03/07 <b>Fim:</b> 28/07 <b>Carga horária:</b> 24 horas</h2>
-                        <h2><b>Horário:</b> Segundas, quartas e sextas das 19h às 21h</h2>
+                        <!-- <h2><b>Início:</b> 03/07 <b>Fim:</b> 28/07 <b>Carga horária:</b> 24 horas</h2>
+                        <h2><b>Horário:</b> Segundas, quartas e sextas das 19h às 21h</h2> -->
                         <h2><b>Investimento:</b> R$590,00 em até 12x no cartão</h2>
                         </br>
                         <h2><b style="color: white">MATRICULE-SE JÁ!</b></h2>
                         <br>
-                        <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
-                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post" target="_blank">
+                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
                         <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
-                        <input type="hidden" name="code" value="44F15A194545D31114E46FADE2527FA8" />
+                        <input type="hidden" name="code" value="C48759D0E6E663F994970F8453A3F004" />
                         <input type="hidden" name="iot" value="button" />
-                        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-comprar-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+                        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-pagar-laranja-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
                         </form>
-                        <!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
                     </div>
                 </div>
             </div>
@@ -408,20 +382,18 @@
                     <div class="intro">
                         <h2>CURSO</h2>
                         <h1>Promob + Projeto de Interiores</h1>
-                        <h2><b>Início:</b> 24/06 <b>Fim:</b> 29/07 <b>Carga horária:</b> 15 horas</h2>
-                        <h2><b>Horário:</b> Sábados das 13h30 às 16h</h2>
+                        <!-- <h2><b>Início:</b> 24/06 <b>Fim:</b> 29/07 <b>Carga horária:</b> 15 horas</h2>
+                        <h2><b>Horário:</b> Sábados das 13h30 às 16h</h2> -->
                         <h2><b>Investimento:</b> R$549,00 em até 12x no cartão</h2>
                         </br>
                         <h2><b style="color: white">MATRICULE-SE JÁ!</b></h2>
                         <br>
-                        <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
-                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post" target="_blank">
+                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
                         <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
-                        <input type="hidden" name="code" value="D1178E38B2B264E22457FF88804DD13A" />
+                        <input type="hidden" name="code" value="0B6DD1A3D0D01AC884BF0F832667A366" />
                         <input type="hidden" name="iot" value="button" />
-                        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-comprar-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+                        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-pagar-laranja-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
                         </form>
-                        <!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
                     </div>
                 </div>
             </div>
@@ -429,21 +401,60 @@
 
 
             <div class="section" data-anchor="photoshop" style="background-color: #232f63; color: white;">
-                <div class="intro">
-                    <h1>Photoshop</h1>
-                    <h2>Com o intuito de capacitar o profissional da área de arquitetura, urbanismo e decoração a manusear o principal software de manipulação de imagens e suas ferramentas para a realização de fotomontagens, texturas, ajustes de luz, sombra, cor entre outros. A realidade e qualidade que você precisa! </h2>
-                    </br>
-                    <h2 class="matriculas" style="color: white;"><b>NOVAS TURMAS EM BREVE</b></h2>
+                <div class="slide">
+                    <div class="intro">
+                        <h1>Photoshop</h1>
+                        <h2>Com o intuito de capacitar o profissional da área de arquitetura, urbanismo e decoração a manusear o principal software de manipulação de imagens e suas ferramentas para a realização de fotomontagens, texturas, ajustes de luz, sombra, cor entre outros. A realidade e qualidade que você precisa! </h2>
+                        </br>
+                        <h2 class="matriculas" style="color: white;"><b>MATRÍCULAS ABERTAS</b></h2>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="intro">
+                        <h2>CURSO</h2>
+                        <h1>Photoshop para arquitetura</h1>
+                        <!-- <h2><b>Início:</b> 24/06 <b>Fim:</b> 29/07 <b>Carga horária:</b> 15 horas</h2>
+                        <h2><b>Horário:</b> Sábados das 13h30 às 16h</h2> -->
+                        <h2><b>Investimento:</b> R$449,00 em até 12x no cartão</h2>
+                        </br>
+                        <h2><b style="color: white">MATRICULE-SE JÁ!</b></h2>
+                        <br>
+                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
+                        <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
+                        <input type="hidden" name="code" value="127742EC242495E3346F6FB28AE33B6C" />
+                        <input type="hidden" name="iot" value="button" />
+                        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-pagar-laranja-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+                        </form>
+                    </div>
                 </div>
             </div>
             <div class="section" data-anchor="corel" style="background-color: #47a134; color: white;">
-                <div class="intro">
-                    <h1>Corel Draw</h1>
-                    <h2>Capacitar para humanização de planta baixa para o ramo de arquitetura, utilizando arquivos de imagens ou arquivos do AutoCAD
-Mostrar na prática a utilização das ferramentas do CorelDRAW X7 para humanização de plantas. Dê vida a seus projetos!</h2>
-</br>
-
-                    <h2 class="matriculas" style="color: white;"><b>NOVAS TURMAS EM BREVE</b></h2>
+                <div class="slide">
+                    <div class="intro">
+                        <h1>Corel Draw</h1>
+                        <h2>Capacitar para humanização de planta baixa para o ramo de arquitetura, utilizando arquivos de imagens ou arquivos do AutoCAD
+    Mostrar na prática a utilização das ferramentas do CorelDRAW X7 para humanização de plantas. Dê vida a seus projetos!</h2>
+                        </br>
+                        <h2 class="matriculas" style="color: white;"><b>MATRÍCULAS ABERTAS</b></h2>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="intro">
+                        <h2>Aula particular</h2>
+                        <h1>CorelDraw para plantas humanizadas</h1>
+                        <!-- <h2><b>Início:</b> 24/06 <b>Fim:</b> 29/07 <b>Carga horária:</b> 15 horas</h2>
+                        <h2><b>Horário:</b> Sábados das 13h30 às 16h</h2> -->
+                        <h2><b>Investimento:</b> R$349,00 em até 12x no cartão</h2>
+                        </br>
+                        <h2><b style="color: white">MATRICULE-SE JÁ!</b></h2>
+                        <br>
+                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
+                        <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
+                        <input type="hidden" name="code" value="127742EC242495E3346F6FB28AE33B6C" />
+                        <input type="hidden" name="iot" value="button" />
+                        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-pagar-laranja-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+                        </form>
+                    </div>
                 </div>
             </div>
 
@@ -466,7 +477,6 @@ Mostrar na prática a utilização das ferramentas do CorelDRAW X7 para humaniza
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 <script type="text/javascript" src="/scripts/jquery.easing.1.3.js"></script>
-<script tupe="text/javascript" src="/scripts/cursos.js"></script>
 <script type="text/javascript" src="/scripts/maps.js"></script>
 <script type="text/javascript" src="/scripts/scripts.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.js"></script>
